--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,17 @@
 [tox]
-envlist = py{35,36,37}, test-devel
+envlist = py3{5,6,7,8}, test-devel
 
 [travis]
 python =
-    3.7: py37, test-devel
+    3.8: py38, test-devel
+    3.7: py37
     3.6: py36
     3.5: py35
 
 [gh-actions]
 python =
-    3.7: py37, test-devel
+    3.8: py38, test-devel
+    3.7: py37,
     3.6: py36
     3.5: py35
 
